<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.rahilkarim.vyapar.SplashFragment"
        android:label="@string/splash_screen"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashScreenFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.rahilkarim.vyapar.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_verifyOTPFragment"
            app:destination="@id/verifyOTPFragment" />
    </fragment>
    <fragment
        android:id="@+id/verifyOTPFragment"
        android:name="com.rahilkarim.vyapar.VerifyOTPFragment"
        android:label="@string/verify_otp"
        tools:layout="@layout/fragment_verify_o_t_p" />
</navigation>