<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/margin16"
        android:layout_above="@id/submitBtLayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verifying_otp"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/changeMobileNumbertv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textColor="@color/textColorHigh"
            android:textSize="@dimen/sp16"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otplo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp_code"
            app:helperTextEnabled="true"
            app:endIconMode="clear_text"
            android:layout_marginTop="@dimen/margin24"
            android:layout_marginBottom="@dimen/margin8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:text=""
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/timertv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:text="@string/resend_code_in_29_sec"
            android:textColor="@color/textColorHigh"
            android:textSize="@dimen/sp16"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submitBtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin16"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin16"
            >

            <View
                android:layout_width="@dimen/margin64"
                android:layout_height="@dimen/margin1"
                android:layout_gravity="center_vertical"
                android:background="@color/dividerColor"/>

            <TextView
                android:id="@+id/tagLinestv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grow_business"
                android:textColor="@color/textColorHigh"
                android:textSize="@dimen/sp16"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin4"
                android:layout_marginEnd="@dimen/margin4"
                />

            <View
                android:layout_width="@dimen/margin64"
                android:layout_height="@dimen/margin1"
                android:layout_gravity="center_vertical"
                android:background="@color/dividerColor"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin16"
            app:cornerRadius="@dimen/margin24"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:enabled="false"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:text="@string/submit"/>

    </LinearLayout>

</RelativeLayout>