<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin8"
    android:paddingEnd="@dimen/margin8"
    android:id="@+id/itemListParentLayout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin8"
        >

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin12"
            android:layout_alignParentTop="true"
            android:singleLine="true"
            android:text="@string/item_name"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/salesPriceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/itemName"
            android:layout_marginEnd="@dimen/margin32"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/sales_price"
                android:textAlignment="textStart"
                android:textColor="@color/textColorHigh"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/salesPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin4"
                android:singleLine="true"
                android:text="@string/demo_amount"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/purchasePriceLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/salesPriceLayout"
            android:layout_below="@id/itemName"
            android:layout_marginEnd="@dimen/margin32"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/purchase_price"
                android:textAlignment="textStart"
                android:textColor="@color/textColorHigh"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/purchasePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin4"
                android:singleLine="true"
                android:text="@string/demo_amount"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inStockLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/purchasePriceLayout"
            android:layout_below="@id/itemName"
            android:layout_marginEnd="@dimen/margin32"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/in_stock"
                android:textAlignment="textStart"
                android:textColor="@color/textColorHigh"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/inStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin4"
                android:singleLine="true"
                android:text="@string/demo_number"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/successColor"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin1"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginBottom="@dimen/margin4"
        android:background="@color/dividerColor"
        />

</LinearLayout>